testing out runbook

--- a/local.yml
+++ b/local.yml
@@ -1,48 +1,5 @@
+---
 - hosts: localhost
-  connection: local
   become: true
-
-  tasks:
-  - name: Enable pacman colourised output and verbose package lists
-    replace:
-      path: /etc/pacman.conf
-      regexp: '{{ item.regexp }}'
-      replace: '{{ item.replace }}'
-    with_items:
-      - { regexp: '^#Color$', replace: 'Color' }
-      - { regexp: '^#VerbosePkgLists$', replace: 'VerbosePkgLists' }
-
-  - name: full system upgrade
-    pacman:
-      update_cache: yes
-      upgrade: yes
-
-  - name: Install archival utils
-    pacman:
-      name:
-        - atool
-        - p7zip
-        - unrar
-        - unzip
-        - xz
-        - zip
-        - bzip2
-        - gzip
-        - tar
-      state: present
-
-  - name: install basic tools
-    pacman:
-      name:
-        - git
-        - vim
-        - tmux
-        - tree
-        - which
-        - base-devel
-        - tar
-        - vlc 
-        - curl
-        - wget
-        - zsh
-      state: present
+  roles:
+  - common 
